Integrate document servince into aggregate
